# aisploit

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml  docs.yml
aisploit/agent/: __init__.py  red_teaming_bot.py
aisploit/chat/: __init__.py  ollama.py  openai.py
aisploit/classifier/: text.py
aisploit/classifier/huggingface/: __init__.py  hub_prompt_injection_identifier.py  pipeline_prompt_injection_identifier.py  prompt_injection_identifier.py  prompt_injection_identifier_hub.py  prompt_injection_identifier_pipeline.py
aisploit/classifier/openai/: __init__.py  moderation.py
aisploit/classifiers/: __init__.py  markdown.py  package_hallucination.py  repeated_token.py  self_similarity.py  text.py
aisploit/classifiers/amazon/: __init__.py  comprehend.py
aisploit/classifiers/huggingface/: __init__.py  bert_score.py  bleu.py  pipeline_prompt_injection.py  pipeline_prompt_injection_identifier.py
aisploit/classifiers/openai/: moderation.py
aisploit/classifiers/presidio/: __init__.py  presidio_analyser.py
aisploit/converter/: __init__.py  base64.py  gender.py  join.py  keyboard_typo.py  remove_punctuation.py  sequence.py
aisploit/converters/: __init__.py  base64.py  case.py  gender.py  join.py  keyboard_typo.py  no_op.py  remove_punctuation.py  sequence.py  stemming.py  translation.py  unicode_confusable.py  unicode_tags.py
aisploit/core/: __init__.py  callbacks.py  classifier.py  converter.py  dataset.py  generator.py  job.py  model.py  prompt.py  report.py  score.py  target.py  vectorstore.py
aisploit/dataset/: __init__.py  dataset.py  prompt.py  sample.py
aisploit/dataset/jailbreak/: aim.yaml
aisploit/dataset/prompts/: evil_confidant.yaml  steve.yaml  ucar.yaml
aisploit/datasets/: __init__.py  prompt.py  sample.py
aisploit/datasets/prompts/: developer_mode_2.yaml  evil_confidant.yaml
aisploit/demo/: __init__.py  gandalf.py  rag.py
aisploit/embedding/: __init__.py  google.py  ollama.py  openai.py
aisploit/embeddings/: __init__.py  bedrock.py  google.py  huggingface.py  ollama.py  openai.py
aisploit/generator/: poison.py
aisploit/generators/: __init__.py  auto_jailbreak.py  poison.py
aisploit/integration/: __init__.py  gandalf.py  rag.py
aisploit/jailbreak/: __init__.py  loader.py
aisploit/jailbreak/prompts/: better_dan.yaml
aisploit/llm/: __init__.py  chat_ollama.py  chat_openai.py
aisploit/model/: __init__.py  bedrock_chat.py  chat_anthropic.py  chat_google.py  chat_ollama.py  chat_openai.py
aisploit/models/: chat_anthropic.py  chat_google.py  chat_openai.py
aisploit/poison/: __init__.py  generator.py  poison.py
aisploit/red_team/: __init__.py  job.py  report.py  task.py
aisploit/redteam/: __init__.py  bot.py  job.py  report.py  task.py
aisploit/scanner/: __init__.py  issue.py  job.py  plugin.py  report.py
aisploit/scanner/plugins/: __init__.py  image_markdown_injection.py  image_markdown_injection_plugin.py  many_shot.py  (+6 more)
aisploit/sender/: __init__.py  job.py  report.py
aisploit/targets/: __init__.py  copilot.py  email.py  image.py  langchain.py  stdout.py  target.py
aisploit/utils/: __init__.py  distance.py  docx.py  helper.py  http.py  image.py  smtp.py
docs/: classifiers.ipynb  conf.py  image_prompt_injection.ipynb  index.rst  scanner.ipynb
docs/_static/: custom.css
docs/_templates/: badges.html  disclaimer.html
docs/api/: index.rst
examples/: auto_jailbreak.ipynb  classifier.ipynb  converter.ipynb  gandalf.ipynb  image_prompt_injection.ipynb  jailbreak.ipynb  poison.ipynb  scanner.ipynb  sender.ipynb  target.ipynb
tests/classifier/: test_markdown.py  test_package_hallucination.py  test_text.py
tests/converter/: test_base64.py  test_join.py  test_keyboard_typo.py
tests/red_team/: test_report.py
tests/redteam/: test_report.py
tests/utils/: test_distance.py
(+13 files in other folders)
