[tool.poetry]
name = "aisploit"
version = "0.0.15"
description = "Tiny package designed to support red teams and penetration testers in exploiting large language model AI solutions."
authors = ["hupe1980"]
repository = "https://github.com/hupe1980/aisploit"
homepage = "https://github.com/hupe1980/aisploit"
license = "MIT"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = [
    "redteam",
    "genai",
    "llm",
    "ai",
    "responsible-ai",
    "pentest",
    "cybersecurity",
]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.6.2"
requests = "^2.31.0"
langchain-openai = ">=0.1.1"
langchain-core = ">=0.1.26"
langchain-community = ">=0.0.24"
python-dotenv = "^1.0.1"
numpy = "^1.26.4"
transformers = "^4.38.1"
torch = "^2.2.2"
jinja2 = "^3.1.3"
ipython = "^8.23.0"
imapclient = "^3.0.1"
langchain-anthropic = "^0.1.6"
langchain-google-genai = "^1.0.1"

[tool.poetry.group.dev.dependencies]
chromadb = "^0.4.23"
pytest = "^8.0.1"
jupyter = "^1.0.0"
types-pyyaml = "^6.0.12.12"
types-requests = "^2.31.0.20240218"
black = "^24.2.0"
mypy = "^1.8.0"

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
